- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    5.15.16, 6.5.5, 6.6.2
- 
        
- 
        270866923 (dev), 7229cc75a (6.8), a70f37ebf (6.7), d4beb9c57 (tqtc/lts-6.5), 4966566cd (tqtc/lts-6.2)
Reproducer attached.
qputenv("QT_SCALE_FACTOR", "2"); //Or whatever value != 1, e.g. 1.5, etc..
is used to test scale factors. And inside Widget constructor
label->winId();
is called without any further handling. Simply calling that method is enough to reproduce the issue. The result is an unexpected 1x pixmap being rendered on top of the 2x one. Commenting out the winId() line, only 2x pixmap is rendered.
Also tested on Windows - not reproducible. So seems to be a macOS issue.
| For Gerrit Dashboard: QTBUG-122967 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 584520,3 | macOS: Query platform window for size when flushing child windows | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 584666,2 | macOS: Query platform window for size when flushing child windows | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 584709,2 | macOS: Query platform window for size when flushing child windows | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 584862,2 | macOS: Query platform window for size when flushing child windows | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 | 
| 585046,2 | macOS: Query platform window for size when flushing child windows | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |